--- a/mock/src/styles/repl.css
+++ b/mock/src/styles/repl.css
@@ -5,6 +5,7 @@
   width: 100%;
   min-height: 75vh;
   background-color: lightblue;
+  border-radius: 75px;
 }
 
 .repl-history {
